# kconfiglib-standalone

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
kconfiglib_standalone/: diffconfig.py  guiconfig.py  kconfig.py  kconfigfunctions.py  kconfiglib.py  lint.py  menuconfig.py
kconfiglib_standalone/devicetree/: __init__.py  _private.py  dtlib.py  edtlib.py  grutils.py
